default/objects/Sales_Plan__c/Sales_Plan__c.object-meta.xml
<CustomObject>
    <label>Sales Plan</label>
    <nameField>
        <displayFormat>PLAN-{0000}</displayFormat>
        <label>Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>