default/objects/Sales_Plan__c/fields/Fleetcor_Calendar_Month__c.field-meta.xml
<CustomField>
    <fullName>Fleetcor_Calendar_Month__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fleetcor Calendar Month</label>
    <referenceTo>Fleetcor_Calendar_Month__c</referenceTo>
    <relationshipLabel>Sales Plans</relationshipLabel>
    <relationshipName>Sales_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>