default/objects/Sales_Plan__c/fields/Nets__c.field-meta.xml
<CustomField>
    <fullName>Nets__c</fullName>
    <label>Nets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>