default/objects/Sales_Plan__c/fields/Number_of_months_hire__c.field-meta.xml
<CustomField>
    <fullName>Number_of_months_hire__c</fullName>
    <formula>(YEAR( TODAY() )*12+MONTH(TODAY() )) - (YEAR( User__r.Hire_Date__c )*12+MONTH(User__r.Hire_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of months (hire)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>