default/objects/Sales_Plan__c/fields/Y__c.field-meta.xml
<CustomField>
    <fullName>Y__c</fullName>
    <formula>VALUE(Fleetcor_Calendar_Month__r.Fleetcor_Calendar_Year__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Y</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>