default/objects/Sales_Plan__c/recordTypes/Sales.recordType-meta.xml
<RecordType>
    <fullName>Sales</fullName>
    <active>true</active>
    <description>Record type for Sales</description>
    <label>Sales</label>
</RecordType>