default/objects/Sales_Plan__c/recordTypes/Sales_Team_Lead.recordType-meta.xml
<RecordType>
    <fullName>Sales_Team_Lead</fullName>
    <active>true</active>
    <description>Record type for Sales Team Lead</description>
    <label>Sales Team Lead</label>
</RecordType>