default/objects/Sales_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Fleetcor_Calendar_Month__c</columns>
    <columns>Number_of_cards_default__c</columns>
    <columns>Number_of_liters_default__c</columns>
    <columns>Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>